@@ -23,6 +23,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|Arrays
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Objects
 import|;
 end_import
@@ -156,6 +166,10 @@ block|{
 name|validateVersion
 argument_list|(
 name|attributes
+argument_list|,
+name|XMLDataChannelDescriptorLoader
+operator|.
+name|SUPPORTED_PROJECT_VERSIONS
 argument_list|)
 expr_stmt|;
 name|validateNamespace
@@ -188,6 +202,10 @@ name|validateVersion
 parameter_list|(
 name|Attributes
 name|attributes
+parameter_list|,
+name|String
+index|[]
+name|supportedVersions
 parameter_list|)
 block|{
 name|String
@@ -202,15 +220,16 @@ argument_list|)
 decl_stmt|;
 if|if
 condition|(
-operator|!
-name|XMLDataChannelDescriptorLoader
+name|Arrays
 operator|.
-name|CURRENT_PROJECT_VERSION
-operator|.
-name|equals
+name|binarySearch
 argument_list|(
+name|supportedVersions
+argument_list|,
 name|version
 argument_list|)
+operator|<
+literal|0
 condition|)
 block|{
 throw|throw
