@@ -1,0 +1,288 @@
+begin_unit|revision:1.0.0;language:Java;cregit-version:0.0.1
+begin_comment
+comment|/*****************************************************************  *   Licensed to the Apache Software Foundation (ASF) under one  *  or more contributor license agreements.  See the NOTICE file  *  distributed with this work for additional information  *  regarding copyright ownership.  The ASF licenses this file  *  to you under the Apache License, Version 2.0 (the  *  "License"); you may not use this file except in compliance  *  with the License.  You may obtain a copy of the License at  *  *    http://www.apache.org/licenses/LICENSE-2.0  *  *  Unless required by applicable law or agreed to in writing,  *  software distributed under the License is distributed on an  *  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY  *  KIND, either express or implied.  See the License for the  *  specific language governing permissions and limitations  *  under the License.  ****************************************************************/
+end_comment
+
+begin_package
+package|package
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|configuration
+operator|.
+name|xml
+package|;
+end_package
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|CayenneRuntimeException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|Before
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|Test
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|xml
+operator|.
+name|sax
+operator|.
+name|Attributes
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|xml
+operator|.
+name|sax
+operator|.
+name|helpers
+operator|.
+name|AttributesImpl
+import|;
+end_import
+
+begin_comment
+comment|/**  * @since 4.1  */
+end_comment
+
+begin_class
+specifier|public
+class|class
+name|VersionAwareHandlerTest
+block|{
+specifier|private
+specifier|static
+name|String
+index|[]
+name|VERSION_SET_1
+init|=
+block|{
+literal|"10"
+block|,
+literal|"11"
+block|,
+literal|"9"
+block|}
+decl_stmt|;
+comment|// sorted as strings
+specifier|private
+specifier|static
+name|String
+index|[]
+name|VERSION_SET_2
+init|=
+block|{
+literal|"10"
+block|}
+decl_stmt|;
+name|VersionAwareHandler
+name|handler
+decl_stmt|;
+annotation|@
+name|Before
+specifier|public
+name|void
+name|createHandler
+parameter_list|()
+block|{
+name|handler
+operator|=
+operator|new
+name|VersionAwareHandler
+argument_list|(
+operator|new
+name|LoaderContext
+argument_list|(
+literal|null
+argument_list|,
+literal|null
+argument_list|)
+argument_list|,
+literal|"test"
+argument_list|)
+block|{         }
+expr_stmt|;
+block|}
+specifier|private
+name|Attributes
+name|createAttributesWithVersion
+parameter_list|(
+name|String
+name|version
+parameter_list|)
+block|{
+name|AttributesImpl
+name|attributes
+init|=
+operator|new
+name|AttributesImpl
+argument_list|()
+decl_stmt|;
+name|attributes
+operator|.
+name|addAttribute
+argument_list|(
+literal|""
+argument_list|,
+literal|"project-version"
+argument_list|,
+literal|"project-version"
+argument_list|,
+literal|""
+argument_list|,
+name|version
+argument_list|)
+expr_stmt|;
+return|return
+name|attributes
+return|;
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|validateCorrectVersion
+parameter_list|()
+block|{
+name|handler
+operator|.
+name|validateVersion
+argument_list|(
+name|createAttributesWithVersion
+argument_list|(
+literal|"9"
+argument_list|)
+argument_list|,
+name|VERSION_SET_1
+argument_list|)
+expr_stmt|;
+name|handler
+operator|.
+name|validateVersion
+argument_list|(
+name|createAttributesWithVersion
+argument_list|(
+literal|"10"
+argument_list|)
+argument_list|,
+name|VERSION_SET_1
+argument_list|)
+expr_stmt|;
+name|handler
+operator|.
+name|validateVersion
+argument_list|(
+name|createAttributesWithVersion
+argument_list|(
+literal|"11"
+argument_list|)
+argument_list|,
+name|VERSION_SET_1
+argument_list|)
+expr_stmt|;
+name|handler
+operator|.
+name|validateVersion
+argument_list|(
+name|createAttributesWithVersion
+argument_list|(
+literal|"10"
+argument_list|)
+argument_list|,
+name|VERSION_SET_2
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+argument_list|(
+name|expected
+operator|=
+name|CayenneRuntimeException
+operator|.
+name|class
+argument_list|)
+specifier|public
+name|void
+name|validateIncorrectVersion1
+parameter_list|()
+block|{
+name|handler
+operator|.
+name|validateVersion
+argument_list|(
+name|createAttributesWithVersion
+argument_list|(
+literal|"8"
+argument_list|)
+argument_list|,
+name|VERSION_SET_1
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+argument_list|(
+name|expected
+operator|=
+name|CayenneRuntimeException
+operator|.
+name|class
+argument_list|)
+specifier|public
+name|void
+name|validateIncorrectVersion2
+parameter_list|()
+block|{
+name|handler
+operator|.
+name|validateVersion
+argument_list|(
+name|createAttributesWithVersion
+argument_list|(
+literal|"11"
+argument_list|)
+argument_list|,
+name|VERSION_SET_2
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+end_class
+
+end_unit
+
