@@ -15,6 +15,7 @@ Changes/New Features:
 
 CAY-2446 Run Disjoint By Id queries outside of synchronized block
 CAY-2447 Crypto support for LocalDateTime
+CAY-2471 Support multiple XML project versions
 
 Bug Fixes:
 
